--- a/views/shop.pug
+++ b/views/shop.pug
@@ -1,23 +1,11 @@
-<!DOCTYPE html>
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title #{docTitle}
-        link(rel="stylesheet", href="/css/main.css")
-        link(rel="stylesheet", href="/css/product.css")
-    body
-        header.main-header
-            nav.main-header__nav 
-                ul.main-header__item-list
-                    li.main-header__item
-                        a.active(href="/") Shop
-                    li.main-header__item
-                        a(href="/admin/add-product") Add Product
+extends layouts/main-layout.pug
 
-        main
-            if prods.length > 0
+block styles 
+    link(rel="stylesheet", href="/css/product.css")
+
+block content
+    main
+        if prods.length > 0
                 .grid
                     each product in prods
                         article.card.product-item
@@ -30,5 +18,5 @@ html(lang="en")
                                 p.product__description A very interesting book about so many even more interesting things!
                             .card__actions
                                 button.btn Add to Cart
-            else
-                h1 No Products
+        else
+            h1 No Products        
