--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -11,6 +11,12 @@
         <div class="form-control">
           <label for="title">Title</label>
           <input type="text" name="title" id="title" />
+          <label for="imageUrl">Image</label>
+          <input type="text" name="imageUrl" id="imageUrl" />
+          <label for="price">Price</label>
+          <input type="text" name="price" id="price" />
+          <label for="description">Description</label>
+          <textarea type="text" name="description" id="description" rows="5"></textarea>
         </div>
 
         <button class="btn" type="submit">Add Product</button>
