--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -24,6 +24,7 @@
             <p class="product__description"><%= product.description %></p>
           </div>
           <div class="card__actions">
+            <a class="btn" href="/products/<%= product.id %>">Details</a>
             <form method="POST" action="/add-to-cart">
               <button class="btn" type="submit">Add to Cart</button>
             </form>
